--- a/src/map/map.css
+++ b/src/map/map.css
@@ -7,3 +7,29 @@ main {
     background-color: rgb(253, 200, 130);
     border-radius: 3%;
 }
+.container {
+    position: relative;
+    text-align: center;
+}
+.park {
+    position: absolute;
+    top: 10%;
+    right: 40%;
+    background-color: rgb(241, 173, 82);
+}
+.highway {
+    position: absolute;
+    top: 45%;
+    right: 20%;
+    background-color: rgb(241, 173, 82);
+}
+.trashcan {
+    position: absolute;
+    top: 60%;
+    right: 60%;
+    background-color: rgb(241, 173, 82);
+}
+div {
+    padding: 5px;
+    opacity: 0.9;
+}
